--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -1151,16 +1151,27 @@
   {
    "cell_type": "markdown",
    "id": "af11d88d-552e-4ebd-bd18-b18fdd98530d",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Conclusion\n",
     "After combining data from community center attendance, education quality, and traffic safety, we identified the top neighborhood in Pittsburgh to be South Side using a balanced metric. Each neighborhood’s final score reflects its performance in community engagement, support for student development, and street-level safety. To ensure broader coverage, we included neighborhoods that were missing data in one category by assigning them a neutral average score. This allowed for a more inclusive and realistic comparison. Our results suggest that the best neighborhoods are not only active and supportive of education, but also provide a safe environment for residents. While this analysis gives a strong starting point, future versions could be improved by expanding data coverage and incorporating additional factors such as air quality, housing affordability, or access to parks. "
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0fe766bf-51fa-4b23-ba9f-c5d51fc1347e",
+   "metadata": {},
+   "source": [
+    "### Conclusion\n",
+    "While analyzing data from Pittsburgh neighborhoods, we came to the conclusion that South Side was the top neighborhood. Our results show that the strongest neighborhoods support education, community engagement, and safety. The project showed how objective data can highlight strengths that may not always match personal preferences."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0efd049c-d1ed-4c4e-a572-19ad6f67dde3",
+   "id": "c0c5dfb5-56fa-4a66-9bbe-5e722f539a6c",
    "metadata": {},
    "outputs": [],
    "source": []
